--- a/client/src/components/common/PageContainer.css
+++ b/client/src/components/common/PageContainer.css
@@ -1,5 +1,5 @@
 :root {
-  --base-clr: #f9f9fb;
+  --base-clr: #fafafa;
   --line-clr: #d4d4d8;
   --hover-clr: #e0e0e5;
   --text-clr: #1f2937;
@@ -8,7 +8,6 @@
 }
 
 .pageContainer {
-  background-color: var(--base-clr);
   color: var(--text-clr);
   min-height: 100vh;
   min-height: 100dvh;
@@ -17,9 +16,10 @@
 }
 
 #sidebar {
+  z-index: 100;
   box-sizing: border-box;
   height: 100vh;
-  width: 320px;
+  width: 350px;
   background-color: var(--base-clr);
   border-right: 1px solid var(--line-clr);
   padding: 5px 1rem;
